--- a/portfolio.html
+++ b/portfolio.html
@@ -228,5 +228,6 @@
                             </ul>
                         </section>
                     </div>
+                </div>
             </footer>
         </body>
