добавляет оптимизированные картинки, переносит ховер и фокус с ли на ссылку

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </main>
         <!--Footer-->
         <footer class="footer-section">
-            <div class="container footer-section">
+            <div class="container footer-info">
                 <div class="adress-section">
                 <a class="footer-link link" href="" lang="en"><span class="logo-first-word">Web</span>Studio</a>
                 <address class="btm-adress">
