--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                 <a class="logo-link link" href="./index.html" lang="en"><span class="logo-first-word">Web</span>Studio</a>
                 <ul class="menu list">
                     <li class="menu-item">
-                        <a class="menu-link link current" href="./index.html">Студия</a>
+                        <a class="menu-link link " href="./index.html">Студия</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+                        <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="menu-item">
                         <a class="menu-link link" href="">Контакты</a>
@@ -174,7 +174,7 @@
             <!--Footer-->
 
             <footer class="footer-section">
-                <div class="container footer-section">
+                <div class="container footer-info">
                     <div class="adress-section">
                         <a class="footer-link link" href="" lang="en"><span class="logo-first-word">Web</span>Studio</a>
                         <address class="btm-adress">
