подключает оптимизированные картинки к секции команды

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h2 class="primary-title">Наша команда</h2>
                 <ul class="examples list">
                     <li class="examples-item team-item">
-                        <img src="./images/img.jpeg" alt="продукт менеджер" width="270" height="260">
+                        <img src="./images/img.jpg" alt="продукт менеджер" width="270" height="260">
                          <div class="team-text">
                             <h3>Игорь Демьяненко</h3>
                             <p lang="en" class="img-description">Product Designer</p>
@@ -163,7 +163,7 @@
                          </div>    
                     </li>
                     <li class="examples-item team-item">
-                        <img src="./images/img2.jpeg" alt="фронтэнд разрабочтик" width="270" height="260">
+                        <img src="./images/img2.jpg" alt="фронтэнд разрабочтик" width="270" height="260">
                             <div class="team-text">
                                 <h3>Ольга Репина</h3>
                                 <p lang="en" class="img-description">Frontend Developer</p>
@@ -200,7 +200,7 @@
                            </div>
                     </li>
                     <li class="examples-item team-item">
-                        <img src="./images/img3.jpeg" alt="маркетолог" width="270" height="260">
+                        <img src="./images/img3.jpg" alt="маркетолог" width="270" height="260">
                             <div class="team-text">
                                 <h3>Николай Тарасов</h3>
                                 <p lang="en" class="img-description">Marketing</p>
@@ -237,7 +237,7 @@
                            </div>
                     </li>
                     <li class="examples-item team-item">
-                        <img src="./images/img4.jpeg" alt="дизайнер" width="270" height="260">
+                        <img src="./images/img4.jpg" alt="дизайнер" width="270" height="260">
                             <div class="team-text">
                                 <h3>Михаил Ермаков</h3>
                                 <p lang="en" class="img-description">UI Designer</p>
